force-app/main/default/objects/License_Type__c/License_Type__c.object-meta.xml
<CustomObject>
    <label>License Type</label>
    <nameField>
        <label>License Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>