force-app/main/default/objects/License_Type__c/fields/Active_Paid_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Active_Paid_Licenses__c</fullName>
    <label>Active Paid Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>