force-app/main/default/objects/License_Type__c/fields/Applicable_Roles__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Roles__c</fullName>
    <label>Applicable Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Roles</valueSetName>
    </valueSet>
</CustomField>