force-app/main/default/objects/License_Type__c/fields/Assigned_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Licenses__c</fullName>
    <inlineHelpText>Excludes Licenses that are not Active and/or are marked as &quot;Is Free&quot;</inlineHelpText>
    <label>Assigned Licenses</label>
    <summaryFilterItems>
        <field>License__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>License__c.isFree__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.License_Type__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>