force-app/main/default/objects/License_Type__c/fields/Billing_Frequency_Months__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_Months__c</fullName>
    <inlineHelpText>Define how frequently this license type is billed. If monthly, enter 1. If yearly, enter 12.</inlineHelpText>
    <label>Billing Frequency (Months)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>