force-app/main/default/objects/License_Type__c/fields/Free_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Free_Licenses__c</fullName>
    <inlineHelpText>Excludes Licenses that are not Active and/or paid licenses</inlineHelpText>
    <label>Free Licenses</label>
    <summaryFilterItems>
        <field>License__c.isFree__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>License__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.License_Type__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>