force-app/main/default/objects/License_Type__c/fields/License_Cost__c.field-meta.xml
<CustomField>
    <fullName>License_Cost__c</fullName>
    <label>License Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>