force-app/main/default/objects/License_Type__c/fields/License_Cost_in_DKK__c.field-meta.xml
<CustomField>
    <fullName>License_Cost_in_DKK__c</fullName>
    <formula>CASE(
    License_Currency__c,
    &quot;DKK&quot;, License_Cost__c,
    &quot;SEK&quot;, License_Cost__c * SEK_to_DKK__c,
    &quot;USD&quot;, License_Cost__c * USD_to_DKK__c,
    &quot;GBP&quot;, License_Cost__c * GBP_to_DKK__c,
    &quot;EUR&quot;, License_Cost__c * EUR_to_DKK__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Cost in DKK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>