force-app/main/default/objects/License_Type__c/fields/License_Provider__c.field-meta.xml
<CustomField>
    <fullName>License_Provider__c</fullName>
    <label>License Provider</label>
    <referenceTo>License_Provider__c</referenceTo>
    <relationshipLabel>License Types</relationshipLabel>
    <relationshipName>License_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>