force-app/main/default/objects/License_Type__c/fields/License_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Provider_Name__c</fullName>
    <formula>License_Provider__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Provider Name</label>
    <type>Text</type>
</CustomField>