force-app/main/default/objects/License_Type__c/fields/License_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Type_Status__c</fullName>
    <label>License Type Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>Upcoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>