force-app/main/default/objects/License_Type__c/fields/Licenses_on_Terminated_Employees__c.field-meta.xml
<CustomField>
    <fullName>Licenses_on_Terminated_Employees__c</fullName>
    <inlineHelpText>Counts the number of Active Licenses on Terminated Employees. Used to identify Licenses that may need to be stopped.</inlineHelpText>
    <label>Licenses on Terminated Employees</label>
    <summaryFilterItems>
        <field>License__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>License__c.Employment_Status__c</field>
        <operation>equals</operation>
        <value>Terminated</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.License_Type__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>