force-app/main/default/objects/License_Type__c/fields/Monthly_Cost_Per_License_in_DKK__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cost_Per_License_in_DKK__c</fullName>
    <formula>CASE(
    License_Currency__c,
    &quot;DKK&quot;, BLANKVALUE(Monthly_License_Cost__c, 0),
    &quot;SEK&quot;, BLANKVALUE(Monthly_License_Cost__c * SEK_to_DKK__c, 0),
    &quot;USD&quot;, BLANKVALUE(Monthly_License_Cost__c * USD_to_DKK__c, 0),
    &quot;GBP&quot;, BLANKVALUE(Monthly_License_Cost__c * GBP_to_DKK__c, 0),
    &quot;EUR&quot;, BLANKVALUE(Monthly_License_Cost__c * EUR_to_DKK__c, 0),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Cost Per License in DKK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>