force-app/main/default/objects/License_Type__c/fields/Monthly_License_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_License_Cost__c</fullName>
    <formula>License_Cost__c / Billing_Frequency_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly License Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>