force-app/main/default/objects/License_Type__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airtable</fullName>
            </value>
            <value>
                <fullName>Billwerk</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>DanDomain</fullName>
            </value>
            <value>
                <fullName>DocFabricator</fullName>
            </value>
            <value>
                <fullName>GetAccept</fullName>
            </value>
            <value>
                <fullName>Google Workspace</fullName>
            </value>
            <value>
                <fullName>Klarna</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Ninjaform</fullName>
            </value>
            <value>
                <fullName>One.com</fullName>
            </value>
            <value>
                <fullName>Plecto</fullName>
            </value>
            <value>
                <fullName>Pleo</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Scribe</fullName>
            </value>
            <value>
                <fullName>Simply.com</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Slider Revolution</fullName>
            </value>
            <value>
                <fullName>Sprout</fullName>
            </value>
            <value>
                <fullName>Telegenta</fullName>
            </value>
            <value>
                <fullName>Twilio</fullName>
            </value>
            <value>
                <fullName>Whereby</fullName>
            </value>
            <value>
                <fullName>Wordpress</fullName>
            </value>
            <value>
                <fullName>Zapier</fullName>
            </value>
            <value>
                <fullName>Make</fullName>
            </value>
            <value>
                <fullName>Avonni</fullName>
            </value>
            <value>
                <fullName>Relatel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>