force-app/main/default/objects/License_Type__c/fields/Provider_Website__c.field-meta.xml
<CustomField>
    <fullName>Provider_Website__c</fullName>
    <label>Provider Website</label>
    <type>Url</type>
</CustomField>