force-app/main/default/objects/License_Type__c/fields/SEK_to_DKK__c.field-meta.xml
<CustomField>
    <fullName>SEK_to_DKK__c</fullName>
    <label>SEK to DKK</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>