force-app/main/default/objects/License_Type__c/fields/Total_Yearly_Cost_in_DKK__c.field-meta.xml
<CustomField>
    <fullName>Total_Yearly_Cost_in_DKK__c</fullName>
    <formula>Yearly_Cost_Per_License_in_DKK__c * Assigned_Licenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Yearly Cost in DKK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>