force-app/main/default/objects/License_Type__c/fields/Unassigned_Paid_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Paid_Licenses__c</fullName>
    <formula>Active_Paid_Licenses__c -  Assigned_Licenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unassigned Paid Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>