force-app/main/default/objects/License_Type__c/fields/Yearly_Cost_Per_License_in_DKK__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Cost_Per_License_in_DKK__c</fullName>
    <formula>CASE(
    License_Currency__c,
    &quot;DKK&quot;, Yearly_License_Cost__c,
    &quot;SEK&quot;, Yearly_License_Cost__c* SEK_to_DKK__c,
    &quot;USD&quot;, Yearly_License_Cost__c* USD_to_DKK__c,
    &quot;GBP&quot;, Yearly_License_Cost__c* GBP_to_DKK__c,
    &quot;EUR&quot;, Yearly_License_Cost__c* EUR_to_DKK__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Cost Per License in DKK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>