force-app/main/default/objects/License_Type__c/fields/Yearly_License_Cost__c.field-meta.xml
<CustomField>
    <fullName>Yearly_License_Cost__c</fullName>
    <formula>License_Cost__c * (12 / Billing_Frequency_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly License Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>