force-app/main/default/objects/License_Type__c/validationRules/Billing_Frequency_Cannot_be_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Frequency_Cannot_be_0</fullName>
    <active>true</active>
    <errorConditionFormula>Billing_Frequency_Months__c = 0</errorConditionFormula>
    <errorDisplayField>Billing_Frequency_Months__c</errorDisplayField>
    <errorMessage>Billing Frequency cannot be set to 0. If you&apos;re creating a License Type with no cost, choose any currency and any frequency. Set License Cost to 0.</errorMessage>
</ValidationRule>