force-app/main/default/objects/License_Type__c/listViews/Active_User_License_Types.listView-meta.xml
<ListView>
    <fullName>Active_User_License_Types</fullName>
    <columns>Provider__c</columns>
    <columns>NAME</columns>
    <columns>Active_Paid_Licenses__c</columns>
    <columns>Assigned_Licenses__c</columns>
    <columns>Applicable_Roles__c</columns>
    <columns>Provider_Website__c</columns>
    <columns>Monthly_Cost_Per_License_in_DKK__c</columns>
    <columns>Yearly_Cost_Per_License_in_DKK__c</columns>
    <columns>Billing_Frequency_Months__c</columns>
    <columns>EUR_to_DKK__c</columns>
    <columns>SEK_to_DKK__c</columns>
    <columns>USD_to_DKK__c</columns>
    <columns>GBP_to_DKK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>User License</value>
    </filters>
    <filters>
        <field>License_Type_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active User License Types</label>
</ListView>