force-app/main/default/objects/License_Type__c/listViews/All_License_Types.listView-meta.xml
<ListView>
    <fullName>All_License_Types</fullName>
    <columns>License_Provider__c</columns>
    <columns>Provider_Website__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Applicable_Roles__c</columns>
    <columns>Active_Paid_Licenses__c</columns>
    <columns>Assigned_Licenses__c</columns>
    <columns>Unassigned_Paid_Licenses__c</columns>
    <columns>Monthly_Cost_Per_License_in_DKK__c</columns>
    <columns>Yearly_Cost_Per_License_in_DKK__c</columns>
    <columns>Billing_Frequency_Months__c</columns>
    <filterScope>Everything</filterScope>
    <label>All License Types</label>
</ListView>