force-app/main/default/objects/License_Type__c/listViews/Currency_Editing.listView-meta.xml
<ListView>
    <fullName>Currency_Editing</fullName>
    <columns>Provider__c</columns>
    <columns>EUR_to_DKK__c</columns>
    <columns>GBP_to_DKK__c</columns>
    <columns>USD_to_DKK__c</columns>
    <columns>SEK_to_DKK__c</columns>
    <filterScope>Everything</filterScope>
    <label>Currency Editing</label>
</ListView>