force-app/main/default/objects/License_Type__c/listViews/Customer_Service_License_Types.listView-meta.xml
<ListView>
    <fullName>Customer_Service_License_Types</fullName>
    <columns>Provider__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Applicable_Roles__c</columns>
    <columns>Provider_Website__c</columns>
    <columns>Assigned_Licenses__c</columns>
    <columns>Monthly_Cost_Per_License_in_DKK__c</columns>
    <columns>Yearly_Cost_Per_License_in_DKK__c</columns>
    <columns>Billing_Frequency_Months__c</columns>
    <columns>EUR_to_DKK__c</columns>
    <columns>SEK_to_DKK__c</columns>
    <columns>USD_to_DKK__c</columns>
    <columns>License_Type_Status__c</columns>
    <columns>GBP_to_DKK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Applicable_Roles__c</field>
        <operation>includes</operation>
        <value>Customer Service</value>
    </filters>
    <label>Customer Service License Types</label>
</ListView>